# mlutil

./: .gitignore  README.md  build  build.cmd  clean  clean.cmd  run-stack  run-stack.cmd  test  test.cmd
ch02-knn/: README.md  stack.yaml
ch02-knn/data/: README.md
ch02-knn/lib/Ch02KNN/: Classify0.hs
ch02-knn/spec/: Classify0Spec.hs
ch02-knn/src/: Main.hs
ch03-decision-trees/: README.md  ch03-decision-trees.cabal
ch03-decision-trees/data/: README.md
ch03-decision-trees/lib/Ch03DecisionTrees/: DecisionTree.hs  Entropy.hs  Flowchart.hs
ch03-decision-trees/spec/: DecisionTreeSpec.hs  EntropySpec.hs
ch03-decision-trees/src/: FishDemo.hs  LensDemo.hs  Main.hs
ch04-naive-bayes/: ch04-naive-bayes.cabal
ch04-naive-bayes/lib/Ch04NaiveBayes/: Email.hs  NaiveBayes.hs  Util.hs  Vocabulary.hs
ch04-naive-bayes/spec/: EmailSpec.hs  NaiveBayesSpec.hs  UtilSpec.hs  VocabularySpec.hs
ch04-naive-bayes/src/: DataFiles.hs  DogDemo.hs  EmailDemo.hs  Main.hs  RSSDemo.hs
ch05-logistic-regression/: README.md  ch05-logistic-regression.cabal
ch05-logistic-regression/lib/Ch05LogisticRegression/: GradientAscent.hs  Util.hs
ch05-logistic-regression/spec/: DataFiles.hs  GradientAscentSpec.hs  UtilSpec.hs
ch05-logistic-regression/src/: GradientAscentDemo.hs  Main.hs  SigmoidDemo.hs  UtilDemo.hs
ch06-svm/: README.md  ch06-svm.cabal
ch06-svm/lib/Ch06SVM/: Util.hs
ch06-svm/spec/: UtilSpec.hs
ch06-svm/src/: DataFiles.hs
easyla/: README.md  easyla.cabal
easyla/spec/: EasySpec.hs  STSpec.hs
easyla/src/: LA.hs  Main.hs
easyla/src/Numeric/LinearAlgebra/: Easy.hs
easyla/src/Numeric/LinearAlgebra/Easy/: Basics.hs  Devel.hs  ST.hs  Types.hs
mlutil/: README.md  mlutil.cabal  stack.yaml
mlutil/spec/: ArithmeticSpec.hs  FoldingSpec.hs  LabelledMatrixSpec.hs  NormalizationSpec.hs  RandomSpec.hs  TreeSpec.hs  UtilSpec.hs  VectorPrimSpec.hs
mlutil/src/: MLUtil.hs
mlutil/src/MLUtil/: Arithmetic.hs  Charting.hs  Folding.hs  Graphics.hs  IO.hs  Imports.hs  LabelledMatrix.hs  Normalization.hs  Primitives.hs  Random.hs  Roundable.hs  Sorting.hs  Tree.hs  Util.hs
mlutil/src/MLUtil/Graphics/: Flowchart.hs  Imports.hs  LabelledMatrixPlot.hs  RPlot.hs  Rendering.hs  ScatterPlot.hs
mlutil/src/MLUtil/Primitives/: VectorPrim.hs
