name:                         ch04-naive-bayes
version:                      0.1.0.0
synopsis:                     Machine Learning in Action: naive Bayes
description:                  Please see README.md
homepage:                     https://github.com/rcook/mlutil#readme
license:                      MIT
license-file:                 LICENSE
author:                       Richard Cook
maintainer:                   rcook@rcook.org
copyright:                    2016 Richard Cook
category:                     Web
build-type:                   Simple
cabal-version:                >=1.10
data-dir:                     data
data-files:                   email/ham/*.txt
                            , email/spam/*.txt

library
  hs-source-dirs:             lib
  default-language:           Haskell2010
  exposed-modules:            Ch04NaiveBayes.Email
                            , Ch04NaiveBayes.NaiveBayes
                            , Ch04NaiveBayes.Vocabulary
  build-depends:              base
                            , containers
                            , mlutil
                            , split
                            , vector

executable ch04-naive-bayes-app
  hs-source-dirs:             src
  main-is:                    Main.hs
  default-language:           Haskell2010
  other-modules:              DataFiles
                            , DogDemo
                            , EmailDemo
                            , Paths_ch04_naive_bayes
                            , RSSDemo
  build-depends:              base
                            , bytestring
                            , ch04-naive-bayes
                            , containers
                            , directory
                            , feed
                            , filepath
                            , lens
                            , mlutil
                            , strict
                            , vector
                            , wreq

test-suite spec
  type:                       exitcode-stdio-1.0
  hs-source-dirs:             spec
  default-language:           Haskell2010
  main-is:                    Spec.hs
  other-modules:              DataFiles
                            , EmailSpec
                            , NaiveBayesSpec
                            , Paths_ch04_naive_bayes
                            , Spec
                            , VocabularySpec
  build-depends:              base
                            , ch04-naive-bayes
                            , containers
                            , hspec
                            , vector
