name:                         ch05-logistic-regression
version:                      0.1.0.0
synopsis:                     Machine Learning in Action: logistic regression
description:                  Please see README.md
homepage:                     https://github.com/rcook/mlutil#readme
license:                      MIT
license-file:                 LICENSE
author:                       Richard Cook
maintainer:                   rcook@rcook.org
copyright:                    2016 Richard Cook
category:                     Web
build-type:                   Simple
cabal-version:                >=1.10
data-dir:                     data
data-files:                   testSet.txt
                            , horseColicTest.txt
                            , horseColicTraining.txt

library
  hs-source-dirs:             lib
  default-language:           Haskell2010
  exposed-modules:            Ch05LogisticRegression.GradientAscent
                            , Ch05LogisticRegression.Util
  build-depends:              base
                            , mlutil
                            , vector

executable ch05-logistic-regression-app
  hs-source-dirs:             src
  main-is:                    Main.hs
  default-language:           Haskell2010
  other-modules:              DataFiles
                            , GradientAscentDemo
                            , Paths_ch05_logistic_regression
                            , UtilDemo
  build-depends:              Chart
                            , base
                            , ch05-logistic-regression
                            , mlutil
                            , vector

test-suite spec
  type:                       exitcode-stdio-1.0
  hs-source-dirs:             spec
  default-language:           Haskell2010
  main-is:                    Spec.hs
  other-modules:              DataFiles
                            , GradientAscentSpec
                            , Paths_ch05_logistic_regression
                            , Spec
                            , UtilSpec
  build-depends:              base
                            , ch05-logistic-regression
                            , hspec
                            , mlutil
                            , random
                            , vector
