name:                         easyla
version:                      0.1.0.0
synopsis:                     Easy linear algebra
description:                  Please see README.md
homepage:                     https://github.com/rcook/easyla#readme
license:                      MIT
license-file:                 LICENSE
author:                       Richard Cook
maintainer:                   rcook@rcook.org
copyright:                    2016 Richard Cook
category:                     Math
build-type:                   Simple
cabal-version:                >= 1.10

source-repository             head
  type:                       git
  location:                   https://github.com/rcook/easyla.git

library
  hs-source-dirs:             src
  default-language:           Haskell2010
  exposed-modules:            Numeric.LinearAlgebra.Easy
                            , Numeric.LinearAlgebra.Easy.Basics
                            , Numeric.LinearAlgebra.Easy.ST
                            , Numeric.LinearAlgebra.Easy.Types
  build-depends:              base
                            , hmatrix
                            , vector

test-suite spec
  type:                       exitcode-stdio-1.0
  hs-source-dirs:             spec
  default-language:           Haskell2010
  main-is:                    Spec.hs
  other-modules:              EasySpec
  build-depends:              base
                            , easyla
                            , hspec

test-suite doctest
  type:                       exitcode-stdio-1.0
  hs-source-dirs:             doctest
  default-language:           Haskell2010
  main-is:                    Main.hs
  build-depends:              Glob
                            , base
                            , doctest
